--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/logo-png-122x122.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>Escritório de Arquitetura reformas e interiores em curitiba- Tekta</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
@@ -169,7 +169,7 @@
 
     
 
-    <div>
+    <div class="container">
         <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-COZINHA"><div href="#lb-gallery2-j" data-slide-to="0" data-toggle="modal"><img src="assets/images/a1-1500x1071-800x571.jpg" alt="" title="PROJETO"><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">APARTAMENTO VM  
 <br>Local: Pinheirinho/Curitiba - PR <br>Interiores e Luminotécnico: Tekta arquitetura</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-LAVANDERIA"><div href="#lb-gallery2-j" data-slide-to="1" data-toggle="modal"><img src="assets/images/a2-1500x1071-800x571.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-LAVANDERIA"><div href="#lb-gallery2-j" data-slide-to="2" data-toggle="modal"><img src="assets/images/a3-1500x1667-800x889.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-CLOSET/HOMME OFFICE"><div href="#lb-gallery2-j" data-slide-to="3" data-toggle="modal"><img src="assets/images/a4-1429x1071-800x600.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">CLOSET/HOMME OFFICE AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-CLOSET/HOMME OFFICE"><div href="#lb-gallery2-j" data-slide-to="4" data-toggle="modal"><img src="assets/images/a5-1500x1071-800x571.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">CLOSET/HOMME OFFICE AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="CASA AZ-COZINHA"><div href="#lb-gallery2-j" data-slide-to="5" data-toggle="modal"><img src="assets/images/a1-2000x1427-800x571.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA RESIDÊNCIA AZK&nbsp;<br>Local: Vila Isabel/Curitiba - PR 
 <br>Interiores e Luminotécnico: Tekta arquitetura</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="CASA AZ-COZINHA"><div href="#lb-gallery2-j" data-slide-to="6" data-toggle="modal"><img src="assets/images/a2b-1976x1427-800x578.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA RESIDÊNCIA AZK</span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-j"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/a1-1500x1071.jpg" alt="" title="PROJETO"></div><div class="carousel-item"><img src="assets/images/a2-1500x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a3-1500x1667.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a4-1429x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a5-1500x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a1-2000x1427.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/a2b-1976x1427.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-j"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-j"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
@@ -195,7 +195,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kmNaO1ZjYmgoABK5bWzWh6VSSzA51FX+CmNL1vv06q/5UZ0ynbSMCzDNeRE/7IQSBMQx3N0C6JsJ/h552GvwhUav6p9WRJlXD2Q+/oKTVfzNpEhxxSqBX1E6a/+vprw+">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3PFlAkZZRBYYAO90FFuchMXPKhCJ8FAZyhRZ8TOh92tvh7u2wMYlgPvqg6/daB2wzD7Y7u9+xaz/w61x71Ib+KYL0A6YjeQn2w+Qo+jiHYfwCN6jwJrJmi86LY398tAh">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -256,7 +256,7 @@
                     Rebeba Grátis as mais recentes dicas de decoração e construção.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4E1U1BoI9KNbnIfi4zOuGg6KdBPU7W5m9IlkDvUt83stBGEQsEwTa4B/xJWnkb6kVebsGj7XWZMXiOsW/RmUA5LaKSq7JPoed34C3b4YUxa1EiP58MYc5ALOc60VJie6">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v0UDi755xsAAsusXEfFMhL9yFdVMiPugPmdp5NUTPCFfFi6ec41cAnAolbvjAIeRpe7DiOtznkJi8uu3T7vilX0Nr3WGRU2SgnkjXuBrxW+OkMhM8z7aQMJ7R+SVYr0+">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato o mais breve possivel.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
