--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   gtag('config', 'UA-146933670-1');
 </script>
 
-  
+  <meta name="p:domain_verify" content="57e4a4fba3bb41dccc282f485871510e"/>
   
 </head>
 <body>
