--- a/Aprenda-a-instalar-prateleiras-com-suporte-invisível.html
+++ b/Aprenda-a-instalar-prateleiras-com-suporte-invisível.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content4 cid-rzIceKpMqt" id="content4-s">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="mbr-section content4 cid-rzIceKpMqt" id="content4-s">
 
     
 
@@ -107,7 +107,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Ferramentas necessárias.</strong></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>Ferramentas necessárias.</strong></p></div>
         </div>
     </div>
 </section>
@@ -146,7 +146,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cuidados antes de começar</strong></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>Cuidados antes de começar</strong></p></div>
         </div>
     </div>
 </section>
@@ -175,7 +175,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Instalação</strong></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>Instalação</strong></p></div>
         </div>
     </div>
 </section>
@@ -279,7 +279,7 @@
                     Rebeba Grátis as mais recentes dicas de decoração e construção.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CdEoZdPhIwRpmYBfivPw6fuilBJ7Vw29GYcUZdXGYW9KH6NV1u95/aAYHTpFkT2yJn7fygs1ZaVrnMK4QjxQGAP0avGKs2MgEwSqaqq/Jq3XwKYHtNo+10DViKeRPWeW">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OzhX2EAT4NqzyIJfyMyGfJ89p2wA0PE3IZCGhL7bu0O4nd3pCHTifvOwY9ZhPjLerMpEzqo1hSgv+lw4q1z0BOWCtl3+kHtsH4mOXyBNbxQtvIeytidH4LX0GPqbXw/H">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato o mais breve possivel.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
