--- a/Aprenda-a-instalar-prateleiras-com-suporte-invisível.html
+++ b/Aprenda-a-instalar-prateleiras-com-suporte-invisível.html
@@ -23,6 +23,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146933670-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-146933670-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rzGL6SAtOh" once="menu" id="menu2-q">
 
     
@@ -61,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="mbr-section content4 cid-rzIceKpMqt" id="content4-s">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content4 cid-rzIceKpMqt" id="content4-s">
 
     
 
@@ -279,7 +293,7 @@
                     Rebeba Grátis as mais recentes dicas de decoração e construção.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OzhX2EAT4NqzyIJfyMyGfJ89p2wA0PE3IZCGhL7bu0O4nd3pCHTifvOwY9ZhPjLerMpEzqo1hSgv+lw4q1z0BOWCtl3+kHtsH4mOXyBNbxQtvIeytidH4LX0GPqbXw/H">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qZllW1szOcYyRRYn46bTTFcedgCMSrTlub3NRMrDAbCtCBOpSP7tt0ptmhZAn0y2z4ohEyyGDcgUpQlOqsBjVaq7Uri9zQiWy5eAHQm0mrUCS0L4kBCWY6PWXtaA8saA">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato o mais breve possivel.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
