--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+  
+  
+  
+</head>
+<body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146933670-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -30,10 +37,9 @@
 
   gtag('config', 'UA-146933670-1');
 </script>
-  
-  
-</head>
-<body>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-rzGL6SAtOh" once="menu" id="menu2-3">
 
     
@@ -72,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
@@ -180,7 +186,7 @@
     <div class="container">
         <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-COZINHA"><div href="#lb-gallery2-j" data-slide-to="0" data-toggle="modal"><img src="assets/images/a1-1500x1071-800x571.jpg" alt="" title="PROJETO"><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">APARTAMENTO VM  
 <br>Local: Pinheirinho/Curitiba - PR <br>Interiores e Luminotécnico: Tekta arquitetura</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-LAVANDERIA"><div href="#lb-gallery2-j" data-slide-to="1" data-toggle="modal"><img src="assets/images/a2-1500x1071-800x571.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-LAVANDERIA"><div href="#lb-gallery2-j" data-slide-to="2" data-toggle="modal"><img src="assets/images/a3-1500x1667-800x889.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-CLOSET/HOMME OFFICE"><div href="#lb-gallery2-j" data-slide-to="3" data-toggle="modal"><img src="assets/images/a4-1429x1071-800x600.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">CLOSET/HOMME OFFICE AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="APARTAMENTO VM-CLOSET/HOMME OFFICE"><div href="#lb-gallery2-j" data-slide-to="4" data-toggle="modal"><img src="assets/images/a5-1500x1071-800x571.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">CLOSET/HOMME OFFICE AP VM</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="CASA AZ-COZINHA"><div href="#lb-gallery2-j" data-slide-to="5" data-toggle="modal"><img src="assets/images/a1-2000x1427-800x571.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA RESIDÊNCIA AZK&nbsp;<br>Local: Vila Isabel/Curitiba - PR 
-<br>Interiores e Luminotécnico: Tekta arquitetura</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="CASA AZ-COZINHA"><div href="#lb-gallery2-j" data-slide-to="6" data-toggle="modal"><img src="assets/images/a2b-1976x1427-800x578.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">COZINHA RESIDÊNCIA AZK</span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-j"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/a1-1500x1071.jpg" alt="" title="PROJETO"></div><div class="carousel-item"><img src="assets/images/a2-1500x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a3-1500x1667.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a4-1429x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a5-1500x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a1-2000x1427.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/a2b-1976x1427.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-j"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-j"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+<br>Interiores e Luminotécnico: Tekta arquitetura</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="CASA AZ-COZINHA"><div href="#lb-gallery2-j" data-slide-to="6" data-toggle="modal"><img src="assets/images/07a-1350x1578-800x935.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">BANHEIRO AP ZEN</span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-j"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/a1-1500x1071.jpg" alt="" title="PROJETO"></div><div class="carousel-item"><img src="assets/images/a2-1500x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a3-1500x1667.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a4-1429x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a5-1500x1071.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/a1-2000x1427.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/07a-1350x1578.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-j"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-j"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
     </div>
 
 </section>
@@ -203,7 +209,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uZjcj1HMlS8GU4ZeHzEqJOt91KowhQSMmp3FK+XwlMF4ebLearOgJtpDZe57QQHUG5Ei7Zf2zjpIgxh8d6Idr3ql4M5kSBqxPsUJlNImotFH6C9v5GcvvlHr9nmUytab">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zccrsAoU5mAWCWV+vS1KuFmQvuaxamPHTVk/HHxpMyMChdv7Db2dGqjjdA4cxJKHHMg4ZPrqAVOmqSln4Q441FplgAIFadz0WcU5i4RckEMcITpsxj20RVBZ3aWDytXJ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -264,7 +270,7 @@
                     Rebeba Grátis as mais recentes dicas de decoração e construção.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tnZblJ60EfYZ/+B1JCvR59dqE7KI9esshd1RIpWRekgeuWc5f9rxCnqOxgQ+Megq8019juJHIp2fxLVqEUkUyAXxDBgPAR3c+yMtsZQWw/Jj0T206GOX1rmAMpURZub+">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BZJhSuJvPzjPvupvs6aIm5s3bj+c/QxGiFs9M+xnaxlnkmMaQ8irnT99f1lOQ7vfjdoZqgEaTCK4jEyTtt8oNVsYnpMFcegnfJMz/DEBVZcDPEmrZfrLtGj75LWMEC1k">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato o mais breve possivel.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
