--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -77,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
@@ -157,14 +158,14 @@
 
 </section>
 
-<section class="carousel slide cid-rFbGgImckM" data-interval="false" id="slider2-1d">
+<section class="mbr-gallery mbr-slider-carousel cid-rFbIYnFdcn" id="gallery2-1i">
 
     
-    <div class="container content-slider">
-        <div class="content-slider-wrap">
-            <div><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="false" data-interval="false"><ol class="carousel-indicators"><li data-app-prevent-settings="" data-target="#slider2-1d" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider2-1d" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-1d" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider2-1d" class=" active" data-slide-to="3"></li></ol><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/a1-1500x1071.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0;"></div><img src="assets/images/a1-1500x1071.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/a2-1500x1071.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0;"></div><img src="assets/images/a2-1500x1071.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/a3-1-1500x1667.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/a3-1-1500x1667.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/07a-1350x1578.jpg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/07a-1350x1578.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider2-1d"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider2-1d"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div> 
-        </div>
+
+    <div class="container">
+        <div><!-- Filter --><div class="mbr-gallery-filter container gallery-filter-active"><ul buttons="0"><li class="mbr-gallery-filter-all"><a class="btn btn-md btn-primary-outline active display-7" href="">All</a></li></ul></div><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery2-1i" data-slide-to="0" data-toggle="modal"><img src="assets/images/07a-1350x1578-800x935.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery2-1i" data-slide-to="1" data-toggle="modal"><img src="assets/images/a1-1500x1071-800x571.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-1i"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/07a-1350x1578.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/a1-1500x1071.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-1i"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-1i"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
     </div>
+
 </section>
 
 <section class="header1 cid-rzHmhKDChg" id="header16-e">
@@ -206,7 +207,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A1TrwbWLcq48/7xXpF69PkC0gZWpCq5D0iDenIswqZsd3TeBmg7XBNMsTWgcZO/Jw35oTCv948LJvOsx/CDPu5Bs6hzoPWeYnbgjSygPhjonCNeUI/x4GRYRE5Xp9tgy">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vBLu8jhdNRO26hvnm8Y2Bi3HIqpOXTM51CXzcfz+A5NBr8PSnbEEA+S9WNpjv0nuPjDWaHuQLFqvpmq8veppIw5JAbMNHQS6V0I8kDRs4fYFvNFcqyZcZu+hfl9FgPV0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -267,7 +268,7 @@
                     Rebeba Grátis as mais recentes dicas de decoração e construção.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DjlZ4ZtErLZ0PSeSJSUCBa8a4WS4N/skwrR2nI6gUhu0qYzrtQJb/zr4SvT5aK4jSnaB5QCgLJ8yQOxuGTzPjOt/Rgk0V88T9gbjK89QBNQwlOMVdNJJHma9r+teZrcM">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Mx5HQJerX5FacPegVjw2t2yLPPnr9PZhDuQB5TbZO6In45dJ4Q6aIWhKDdJQ1wT2oOokFA1hkUtuMX5QDurmFji4bgSAdRM5VKfPv6UPU7syQVlA3eJpl9HKR82XhhfI">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato o mais breve possivel.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -335,12 +336,15 @@
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/masonry/masonry.pkgd.min.js"></script>
+  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/slidervideo/script.js"></script>
+  <script src="assets/gallery/player.min.js"></script>
+  <script src="assets/gallery/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
