--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ page1.html
                     <div class="card-box align-left">
                         <h4 class="card-title mbr-fonts-style mbr-white mb-3 display-5">
                             <strong>SOBRE NÓS</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Somos a Tekta, um escritório de arquitetura interiores situado em Curitiba.<br>Projetamos espaços de arquitetura e interiores feitos sob medida, com foco constante na experiência e bem estar das pessoas que o utilizam.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Somos a Tekta, um escritório de arquitetura e interiores situado em Curitiba.<br>Projetamos espaços de arquitetura e interiores feitos sob medida, com foco constante na experiência e bem estar das pessoas que o utilizam.</p>
                         
                     </div>
                 </div>
