--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ page1.html
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#top">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-n">SERVIÇOS</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#gallery3-r">
                             PROJETOS</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content15-s">
-                            SOBRE</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-y">CONTATO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-15">ORÇAMENTO</a></li></ul>
+                            SOBRE</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-y">CONTATO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-15">ORÇAMENTO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">BLOG</a></li></ul>
                 
                 
             </div>
@@ -453,7 +453,7 @@ page1.html
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3XCrAeyBMO0qqE0VJ6OdMlus1YfwGWi4G4/DBWgZXvB45Xlyk0f3A6XdSJ2BbiIVqQZqS0mb/IJGeZyCsfi4ViMP7Kkt1iJHVlyjOJ4peDhQqJ9x9I/CLK0+uJfYyYGP">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Nx9BJ8b+SwyrL5MSNilfYvT8KWHGqwMVJ6X2nNDKLv/MkmTxD6Hfxr9tdOvlvVvHl76XIvUe72sVnU19OL2TWGFyk6xI34RlaP8UD0+nsX5NGU4gpVkO7BUoWbSFDyhB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -542,7 +542,7 @@ page1.html
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">Mobirise</a> site creator</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> web templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
