--- a/PROJETOS.html
+++ b/PROJETOS.html
@@ -52,7 +52,7 @@ page1.html
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="home.html">
+                    <a href="index.html">
                         <img src="assets/images/logo-png-121x121.png" alt="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -67,7 +67,7 @@ page1.html
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="home.html">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-n">SERVIÇOS</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="PROJETOS.html">PROJETOS</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-n">SERVIÇOS</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="PROJETOS.html">PROJETOS</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content15-s">
                             SOBRE</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-y">CONTATO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-15">ORÇAMENTO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="BLOG.html">BLOG</a></li></ul>
                 
@@ -359,7 +359,7 @@ page1.html
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Nfq/J0+UgcEFpnbUwNmhEqm/T1xplDZ2qPYHQAPKt8VCFp0DTJN7tKqWDvXetTWwfnnAoekoYUvHHnYyQZjodmvP/XxPRLWa03OzKfc7VHjdXjd99ICVUbbMnhdKJ5Vu">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sTHT7kRIEyGb5iihqQKl1XCxQF0VrIrFlLhgrUUuf+0bL+Erzh1l6/CXvdFuuVcIfogl92XHpv/RelNJfRYjSYMzkgHad1oTO02mnOmY467KirvO9ZfnseCo8QEpNcpv">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -418,7 +418,7 @@ page1.html
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This page</a> was started with Mobirise template</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up your own <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
