--- a/index.html
+++ b/index.html
@@ -26,23 +26,15 @@
   
   
 </head>
-<body>
-
-<!-- Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146933670-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2VGW7W0MXM"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-146933670-1');
+  gtag('config', 'G-2VGW7W0MXM');
 </script>
-Licença NC50E-8AB176AA18CA-352460
-
-page1.html
-<!-- /Analytics -->
-
 
   
   <section class="menu cid-sBm1SNHFwd" once="menu" id="menu1-20">
